--- a/site/lifting_inv/templates/store.html
+++ b/site/lifting_inv/templates/store.html
@@ -64,6 +64,7 @@
             <!-- container -->
             <div class="container">
                 <!-- row -->
+
                 <div class="row">
                     <!-- LOGO -->
                     <div class="col-md-3">
@@ -198,13 +199,20 @@
                     <!-- aside Widget -->
                     <!-- /aside Widget -->
                 </div>
+
                 <!-- /ASIDE -->
                 <!-- STORE -->
+                
                 <div id="store" class="col-md-9">
+                <button id="barbell-item" class="btn btn-primary btn-md" >Show Barbell Items</button>
+                <button id="plate-item"  class="btn btn-primary btn-md">Show Plates Items</button>
+
+
                     <!-- store top filter -->
                     <!-- /store top filter -->
                     <!-- store products -->
                     <div class="row justify-content-between load_csv ">
+                        
 
 
 
