--- a/site/lifting_inv/templates/store - Copy.html
+++ b/site/lifting_inv/templates/store - Copy.html
@@ -36,27 +36,6 @@
                 -ms-flex-pack: justify!important;
                 justify-content: space-between!important;
             }
-			#barbell-item{
-				background-color:grey;
-			}
-			#plate-item{
-				background-color:grey;
-			}
-			.main_section{
-				background-color:#252626;
-			}
-			.product .product-body{
-				background-color:#252626;
-			}
-			.product-name > a {
-				color:#B19366;
-			}
-			.product .product-body .product-category{
-				color:#9C9A88;
-			}
-			.product{
-				box-shadow:0px 0px 0px 0px #ffffff, 0px 0px 0px 1px #3a3a3a;
-			}
         </style>
 </head>
 
@@ -69,7 +48,7 @@
                 <ul class="header-links pull-left">
                     <li></li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a>
+                        <a href="#"><i class="fa fa-envelope-o"></i> truetiming@gmail.com</a>
                     </li>
                     <li></li>
                 </ul>
@@ -121,13 +100,13 @@
     <!-- BREADCRUMB -->
     <!-- /BREADCRUMB -->
     <!-- SECTION -->
-    <div class="section main_section">
+    <div class="section">
         <!-- container -->
         <div class="container">
             <!-- row -->
             <div class="row">
                 <!-- ASIDE -->
-                <!-- <div id="aside" class="col-md-3"> -->
+                <div id="aside" class="col-md-3">
                     <!-- aside Widget -->
                     <!-- /aside Widget -->
                     <!-- aside Widget -->
@@ -136,12 +115,12 @@
                     <!-- /aside Widget -->
                     <!-- aside Widget -->
                     <!-- /aside Widget -->
-               <!-- </div>-->
+                </div>
 
                 <!-- /ASIDE -->
                 <!-- STORE -->
                 
-                <div id="store" class="col-md-12">
+                <div id="store" class="col-md-9">
                 <button id="barbell-item" class="btn btn-primary btn-md" >Barbells</button>
                 <button id="plate-item"  class="btn btn-primary btn-md">Plates</button>
 
